Added: resent activation email
